--- a/src/components/StudentNotebook.scss
+++ b/src/components/StudentNotebook.scss
@@ -4,7 +4,7 @@
   display: flex;
   gap: 20px;
   padding: 20px;
-  background-color: $background-color;
+  background-color: var(--color-paper);
   min-height: 100vh;
 
   .notebook-area {
