--- a/src/components/notebook/ToolPanel.scss
+++ b/src/components/notebook/ToolPanel.scss
@@ -1,4 +1,4 @@
-@import '../../config/designSystem.scss';
+@import '../../config/variables';
 
 .tool-panel {
   width: 200px;
@@ -49,7 +49,7 @@
       &.active {
         background: $accent-blue;
         color: white;
-        border-color: darken($accent-blue, 10%);
+        border-color: #3a7bc8; // darker blue
       }
     }
   }
@@ -110,7 +110,7 @@
 
       &.active {
         border-color: $accent-blue;
-        background: lighten($accent-blue, 45%);
+        background: #e6f2ff; // lighter blue
       }
 
       .stroke-preview {
@@ -142,7 +142,7 @@
       &.active {
         background: $accent-blue;
         color: white;
-        border-color: darken($accent-blue, 10%);
+        border-color: #3a7bc8; // darker blue
       }
     }
   }
